# pytransifex

./: .buildinfo  .env.example  .gitignore  .pre-commit-config.yaml  .pytx_config.yml  .travis.yml  README.md  genindex.html  index.html  nose2.cfg  objects.inv  py-modindex.html  pyproject.toml  requirements-locked.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: pre-commit.yaml  release.yml  test.yml  test_pytx.yml
_autosummary/: pytransifex.Transifex.html  pytransifex.exceptions.html
_modules/: index.html
_modules/pytransifex/: api.html
_sources/: index.rst.txt
_sources/_autosummary/: pytransifex.Transifex.rst.txt  pytransifex.exceptions.rst.txt
docs/: build_deploy.sh  conf.py  index.rst
pytransifex/: __init__.py  __main__.py  api.py  api_new.py  api_old.py  cli.py  config.py  exceptions.py  interfaces.py  plugins_manager.py  utils.py
pytransifex/config-plugins/opengis-mkdocs/: main.py
requirements/: base.txt  dev.txt
test/: test_translation.py
tests/: __init__.py  _translation.py  test_api.py  test_api_new.py  test_api_old.py  test_cli.py  test_config-plugins.py  test_new_api.py  test_public_project.py  test_translation.py  test_utils.py
tests/data/: .qgis-plugin-ci-test-changelog.yaml  test_config.toml  test_config_public.toml
